# agent_gpt

./: .gitignore  CLAUDE.md  FILES.md  config.py  llm_router.py  main.py  mainN.py  pyproject.toml  vanilla_agent.py
.claude/: settings.local.json
agents/: hybrid_agent.py  langgraph_demo.py  run_comparison.py  vanilla_agent.py
evaluation/: INSTRUCTIONS.md  domain_eval.py  domain_results.json  domain_utility_eval.py  domain_utility_results.json  eval_results.json  model_sensitivity_eval.py  privacy_eval.py  recompute_ablation_abs.py  run_comparison_local.json  run_comparison_local.py  run_eval.py  run_evaluation.json  run_evaluation.py  run_evaluation_summary.json  run_leakage_ablation.json  run_leakage_ablation.py  run_ris_attack.py  sensitivity_results.json  test_lc_payload.py  test_pep_prompt.py  timing_eval.json  timing_eval.py  utility_eval.py  utility_results.json  warmup.py  warmup_tasks.json
llm/: cloud_router.py  local_llm.py  test_ollama.py
mock_services/: server.py
privacy/: abstraction_policy.py  agentdam.py  carryover_control.py  pep.py  presidio.py  presidio_redact.py  privacy_enhancing_prompt.py  privacyscope.py  privscope.py  scope_control.py  span_abstraction.py  span_classification.py  span_extractor.py
results/: task_logger.py  task_results.json
state/: gen_preloaded_variants.py  generate_backstory.py  memory_backstory.json  profile_state.json  state_io.py  working_state.json  working_trace.json  working_trace_10.json  working_trace_15.json  working_trace_20.json  working_trace_25.json  working_trace_5.json  working_trace_preloaded.json  (+6 more)
(+17 files in other folders)
