[project]
name = "agent-gpt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "requests",
    "python-dotenv",
    "flask",
]

[project.scripts]
agent = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
