[project]
name = "agent-gpt"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "anthropic",
    "google-genai",
    "requests",
    "python-dotenv",
    "flask",
    "spacy>=3.7",
    "sentence-transformers>=3.0",
    "langgraph>=1.1.8",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "tiktoken",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
]

[project.scripts]
agent = "main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
